WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109638
Fix HTMLToken::Attribute member naming and update callsites to use Vector-based String functions
https://bugs.webkit.org/show_bug.cgi?id=109638
Summary
Fix HTMLToken::Attribute member naming and update callsites to use Vector-bas...
Eric Seidel (no email)
Reported
2013-02-12 17:27:16 PST
Fix HTMLToken::Attribute member naming and update callsites to use Vector-based String functions
Attachments
Patch
(27.23 KB, patch)
2013-02-12 17:29 PST
,
Eric Seidel (no email)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2013-02-12 17:29:16 PST
Created
attachment 187974
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-12 20:26:09 PST
Comment on
attachment 187974
[details]
Patch Clearing flags on attachment: 187974 Committed
r142712
: <
http://trac.webkit.org/changeset/142712
>
WebKit Review Bot
Comment 3
2013-02-12 20:26:13 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 4
2013-02-13 21:59:54 PST
I've since learned/re-learned that this is a change in behavior. Previously String(UChar*, length) will treat length=0 as the empty string. String(Vector) treats vector.size() == 0 as the null string. This patch may need to be amended.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug