Source/WebCore/html/parser/XSSAuditor.cpp
@@ -125,7 +125,7 @@ static bool findAttributeWithName(const HTMLToken& token, const QualifiedName& n
         attrName = "xlink:" + attrName;
 
     for (size_t i = 0; i < token.attributes().size(); ++i) {
-        if (equalIgnoringNullity(token.attributes().at(i).m_name, attrName)) {
+        if (equalIgnoringNullity(token.attributes().at(i).name, attrName)) {
             indexOfMatchingAttribute = i;
             return true;
         }
@@ -394,9 +394,7 @@ bool XSSAuditor::filterParamToken(const FilterTokenRequest& request)
         return false;
 
     const HTMLToken::Attribute& nameAttribute = request.token.attributes().at(indexOfNameAttribute);
-    String name = String(nameAttribute.m_value.data(), nameAttribute.m_value.size());
-
-    if (!HTMLParamElement::isURLParameter(name))
+    if (!HTMLParamElement::isURLParameter(String(nameAttribute.value)))
         return false;
 
     return eraseAttributeIfInjected(request, valueAttr, blankURL().string(), SrcLikeAttribute);
@@ -473,8 +471,8 @@ bool XSSAuditor::eraseDangerousAttributesIfInjected(const FilterTokenRequest& re
     bool didBlockScript = false;
     for (size_t i = 0; i < request.token.attributes().size(); ++i) {
         const HTMLToken::Attribute& attribute = request.token.attributes().at(i);
-        bool isInlineEventHandler = isNameOfInlineEventHandler(attribute.m_name);
-        bool valueContainsJavaScriptURL = !isInlineEventHandler && protocolIsJavaScript(stripLeadingAndTrailingHTMLSpaces(String(attribute.m_value.data(), attribute.m_value.size())));
+        bool isInlineEventHandler = isNameOfInlineEventHandler(attribute.name);
+        bool valueContainsJavaScriptURL = !isInlineEventHandler && protocolIsJavaScript(stripLeadingAndTrailingHTMLSpaces(String(attribute.value)));
         if (!isInlineEventHandler && !valueContainsJavaScriptURL)
             continue;
         if (!isContainedInRequest(decodedSnippetForAttribute(request, attribute, ScriptLikeAttribute)))
@@ -493,9 +491,9 @@ bool XSSAuditor::eraseAttributeIfInjected(const FilterTokenRequest& request, con
     if (findAttributeWithName(request.token, attributeName, indexOfAttribute)) {
         const HTMLToken::Attribute& attribute = request.token.attributes().at(indexOfAttribute);
         if (isContainedInRequest(decodedSnippetForAttribute(request, attribute, treatment))) {
-            if (threadSafeMatch(attributeName, srcAttr) && isLikelySafeResource(String(attribute.m_value.data(), attribute.m_value.size())))
+            if (threadSafeMatch(attributeName, srcAttr) && isLikelySafeResource(String(attribute.value)))
                 return false;
-            if (threadSafeMatch(attributeName, http_equivAttr) && !isDangerousHTTPEquiv(String(attribute.m_value.data(), attribute.m_value.size())))
+            if (threadSafeMatch(attributeName, http_equivAttr) && !isDangerousHTTPEquiv(String(attribute.value)))
                 return false;
             request.token.eraseValueOfAttribute(indexOfAttribute);
             if (!replacementValue.isEmpty())
@@ -518,8 +516,8 @@ String XSSAuditor::decodedSnippetForAttribute(const FilterTokenRequest& request,
     // for an input of |name="value"|, the snippet is |name="value|. For an
     // unquoted input of |name=value |, the snippet is |name=value|.
     // FIXME: We should grab one character before the name also.
-    int start = attribute.m_nameRange.m_start - request.token.startIndex();
-    int end = attribute.m_valueRange.m_end - request.token.startIndex();
+    int start = attribute.nameRange.start - request.token.startIndex();
+    int end = attribute.valueRange.end - request.token.startIndex();
     String decodedSnippet = fullyDecodeString(request.sourceTracker.sourceForToken(request.token).substring(start, end - start), m_encoding);
     decodedSnippet.truncate(kMaximumFragmentLengthTarget);
     if (treatment == SrcLikeAttribute) {
